examples/starchan/src/frontend/features/errors/ErrorMessageContextual.tsx
import ErrorMessage from './ErrorMessage'

export default function ErrorMessageContextual() {
    return (
        <>
            <hr />
            <ErrorMessage />
        </>
    )
}
